--- a/dcelery/requirements.txt
+++ b/dcelery/requirements.txt
@@ -8,6 +8,7 @@ click-plugins==1.1.1
 click-repl==0.3.0
 Django==5.0.1
 kombu==5.3.5
+pika==1.3.2
 prompt-toolkit==3.0.43
 python-dateutil==2.8.2
 redis==5.0.1
