--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,13 @@ version: '3.8'
 
 services:
 
+  rabbitmq:
+    image: rabbitmq:management
+    container_name: rabbitmq
+    ports:
+      - 5672:5672
+      - 15672:15672
+
   redis:
     container_name: redis
     image: redis:7.2-alpine
@@ -26,7 +33,7 @@ services:
     container_name: celery1
     build:
       context: ./dcelery
-    command: celery --app=dcelery worker -l INFO -Q queue1
+    command: celery --app=dcelery worker -l INFO -Q tasks
     volumes:
       - ./dcelery:/usr/src/app/
     environment:
@@ -36,15 +43,16 @@ services:
     depends_on:
       - redis
       - django
+      - rabbitmq
 
-  celery2:
-    container_name: celery2
-    build:
-      context: ./celeryworker
-      dockerfile: Dockerfile
-    command: celery -A celerytasks worker --loglevel=INFO -Q queue2
-    volumes:
-      - ./celeryworker:/usr/src/app/
-    depends_on:
-      - redis
-      - django
+  # celery2:
+  #   container_name: celery2
+  #   build:
+  #     context: ./celeryworker
+  #     dockerfile: Dockerfile
+  #   command: celery -A celerytasks worker --loglevel=INFO -Q queue2
+  #   volumes:
+  #     - ./celeryworker:/usr/src/app/
+  #   depends_on:
+  #     - redis
+  #     - django
